--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
     "type": "library",
     "description": "PHP type safe, immutable calendar library",
     "keywords": ["calendar", "immutable", "holidays", "sleep"],
+    "prefer-stable": true,
+    "minimum-stability": "dev",
     "require": {
         "php": ">=7.4.2",
         "webmozart/assert": "^1.8",
@@ -38,6 +40,10 @@
             "Aeon\\Calendar\\Tests\\": "tests/Aeon/Calendar/Tests/"
         }
     },
+    "config": {
+        "optimize-autoloader": true,
+        "sort-packages": true
+    },
     "scripts": {
         "test": [
             "phpunit"
@@ -51,5 +57,10 @@
             "php-cs-fixer fix --dry-run"
         ],
         "cs:php:fix": "php-cs-fixer fix"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
     }
 }
